# pdgl

./: .gitignore  .gitmodules  .mdformat.toml  .pre-commit-config.yaml  CITATION  CMakeLists.txt  Justfile  LICENSE  cppcheck.supp  flake.nix  mkdocs.yml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: QA.yml  release.yml
docs/: .authors.yml  README.md  admonitions.css  colors.css  lib_docs.md  ref.bib  status.css
docs/interfaces/: production.md
docs/manual/: building.md  getting.md  index.md  manual.md  running.md
docs/use-cases/: execute_generation_of_language.md  execute_janet_production.md  execute_multiple_generations.md  execute_production.md  execute_pure_production.md  execute_range_production.md  execute_weighted_production.md  force_exit.md  force_terminate_production.md  language_specification_is_welldefined.md  load_language_specification.md  log_state_information.md  pop_production_from_stack.md  push_production_to_stack.md  (+3 more)
libraries/: CMakeLists.txt
source/: CMakeLists.txt
source/prod_janet/: CMakeLists.txt  mkdocs.yml
source/prod_janet/docs/: index.md  unit_description.md
source/prod_janet/src/: init_script.janet  prod_janet.c  prod_janet.h
source/prod_janet/test/: CMakeLists.txt  test_prod_janet.c
source/prod_janet/test/tests/resolve/: negative.c  negative.h  positive.c  positive.h
source/prod_janet/test/tests/terminal/: negative.c  negative.h  positive.c  positive.h
source/prod_janet/test/utils/: test_utils_prod_janet.c  test_utils_prod_janet.h
source/prod_pure/: CMakeLists.txt  mkdocs.yml
source/prod_pure/docs/: index.md  unit_description.md
source/prod_pure/src/: prod_pure.c  prod_pure.h
source/prod_pure/test/: CMakeLists.txt  test_prod_pure.c
source/prod_pure/test/tests/resolve/: negative.c  negative.h  positive.c  positive.h
source/prod_pure/test/tests/terminal/: negative.c  negative.h  positive.c  positive.h
source/prod_pure/test/utils/: test_utils_prod_pure.c  test_utils_prod_pure.h
source/prod_range/: CMakeLists.txt  mkdocs.yml
source/prod_range/docs/: index.md  unit_description.md
source/prod_range/src/: prod_range.c  prod_range.h
source/prod_range/test/: CMakeLists.txt  test_prod_range.c
source/prod_range/test/tests/resolve/: negative.c  negative.h  positive.c  positive.h
source/prod_range/test/utils/: test_utils_prod_range.c  test_utils_prod_range.h
source/prod_weighted/test/: CMakeLists.txt  test_prod_weighted.c
source/prod_weighted/test/tests/resolve/: negative.c  negative.h  positive.c  positive.h
source/prod_weighted/test/tests/terminal/: negative.c  negative.h  positive.c  positive.h
source/prod_weighted/test/utils/: test_utils_prod_weighted.c  test_utils_prod_weighted.h
source/production_store/: CMakeLists.txt  mkdocs.yml
source/production_store/docs/: index.md  unit_description.md
source/production_store/src/: production_store.c  production_store.h
source/production_store/test/: CMakeLists.txt  test_production_store.c
source/production_store/test/tests/add/: negative.c  negative.h  positive.c  positive.h
source/production_store/test/tests/find/: negative.c  negative.h  positive.c  positive.h
source/production_store/test/utils/: test_utils_production_store.c  test_utils_production_store.h
source/resolution_machine/: CMakeLists.txt  mkdocs.yml
source/resolution_machine/docs/: index.md  unit_description.md
source/resolution_machine/src/: resolution_machine.c  resolution_machine.h
source/resolution_machine/test/: CMakeLists.txt  test_resolution_machine.c
source/resolution_machine/test/tests/execute/: negative.c  negative.h  positive.c  positive.h
source/resolution_machine/test/utils/: test_utils_resolution_machine.c  test_utils_resolution_machine.h
source/toml_parser/: CMakeLists.txt  mkdocs.yml
source/toml_parser/docs/: index.md  unit_description.md
source/toml_parser/src/: toml_parser.c  toml_parser.h
source/toml_parser/test/: CMakeLists.txt  test_toml_parser.c
source/toml_parser/test/tests/parsing/: negative.c  negative.h  positive.c  positive.h
source/toml_parser/test/utils/: test_utils_toml_parser.c  test_utils_toml_parser.h
source/toml_parser/test/utils/data/: invalid_janet_name.toml  invalid_janet_name_type.toml  invalid_janet_replacement.toml  invalid_janet_replacement_type.toml  invalid_janet_terminal.toml  invalid_janet_terminal_type.toml  invalid_janet_transition_type.toml  invalid_malformed.toml  invalid_no_entry.toml  invalid_pure_extra.toml  invalid_pure_name.toml  invalid_pure_name_type.toml  invalid_pure_replacement.toml  invalid_pure_replacement_type.toml  invalid_pure_terminal.toml  invalid_pure_terminal_type.toml  invalid_pure_transition.toml  invalid_pure_transition_type.toml  invalid_range_lower.toml  invalid_range_lower_type.toml  invalid_range_name.toml  invalid_range_name_type.toml  invalid_range_upper.toml  invalid_range_upper_type.toml  invalid_weighted_extra.toml  invalid_weighted_name.toml  invalid_weighted_name_type.toml  invalid_weighted_replacement.toml  invalid_weighted_replacement_string.toml  invalid_weighted_replacement_string_type.toml  invalid_weighted_replacement_type.toml  invalid_weighted_replacement_weight.toml  invalid_weighted_replacement_weight_type.toml  invalid_weighted_terminal.toml  invalid_weighted_terminal_string.toml  invalid_weighted_terminal_string_type.toml  invalid_weighted_terminal_type.toml  invalid_weighted_terminal_weight.toml  invalid_weighted_terminal_weight_type.toml  valid_all_prod_types.toml
wrappers/: CMakeLists.txt
wrappers/cli/: CMakeLists.txt  mkdocs.yml
wrappers/cli/docs/: unit_description.md  use-case.md
wrappers/cli/docs/decisions/interface/: 2026-02-03_00.md
wrappers/cli/src/: main.cpp
wrappers/cli/test/: invalid_malformed.toml  invalid_no_entry.toml  with_janet.toml
wrappers/wasm/: CMakeLists.txt  mkdocs.yml
wrappers/wasm/docs/: unit_description.md  use-case.md
wrappers/wasm/docs/decisions/compiler/: 2026-02-03_00.md
wrappers/wasm/src/: main.cpp
wrappers/wasm/test/: colors.css  hljs.css  index.html  test.mjs  tests.json
(+51 files in other folders)
